# src/infrastructure/api/controllers/user/user.codec.ts
@@ -1,0 +1,5 @@
+import { PostUserInputDto } from "./dto";
+
+export const createUserCodec = {
+    decode: (params: unknown) => PostUserInputDto.safeParse(params),
+}
